Closed Bug 1363465 Opened 7 years ago Closed 7 years ago

VersionsHelpers.h is case-sensitive and does not build on MinGW

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: tjr, Assigned: tjr)

References

(Blocks 1 open bug)

Details

(Whiteboard: [tor])

Attachments

(1 file)

The MinGW file is versionshelpers.h, not VersionsHelpers.h
Attachment #8865981 - Flags: review?(bas)
Comment on attachment 8865981 [details]
Bug 1363465 Adjust VersionsHelpers.h to versionhelpers.h for MinGW

https://reviewboard.mozilla.org/r/137580/#review141128

Please #ifdef this, I'd like our includes to be case-correct. Even if MSVC is not case-sensitive.
Attachment #8865981 - Flags: review?(bas) → review-
Comment on attachment 8865981 [details]
Bug 1363465 Adjust VersionsHelpers.h to versionhelpers.h for MinGW

https://reviewboard.mozilla.org/r/137580/#review141368
Attachment #8865981 - Flags: review?(bas) → review+
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8941c8f47643
Adjust VersionsHelpers.h to versionhelpers.h for MinGW r=bas
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/8941c8f47643
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: