Bug 1363465 Adjust VersionsHelpers.h to versionhelpers.h for MinGW r=bas

MozReview-Commit-ID: 7h04gOYwAJu